--- a/src/component/header/header.css
+++ b/src/component/header/header.css
@@ -1,3 +1,8 @@
-ul a{
+nav a{
     margin-right: 20px;
+}
+nav a.active {
+    text-decoration: underline;
+    background-color: rgb(11, 93, 187);
+    color: rgb(255, 255, 255);
 }
